--- a/inner-page.html
+++ b/inner-page.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>HotGrill</title>
+  <title>HotGrill...</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
