--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>HotGrill...</title>
+  <title>HotGrill</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -50,12 +50,15 @@
       </div>
       -->
 
+      <!--
       <div class="languages d-none d-md-flex align-items-center">
         <ul>
           <li>En</li>
           <li><a href="#">De</a></li>
         </ul>
       </div>
+      -->
+
     </div>
   </div>
 
