--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   ======================================================== -->
 </head>
 
-<body>
+<body style="height: 100%; overflow: hidden;">
 
   <!-- ======= Top Bar ======= -->
 
