Fix reservation menu

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
 
     <!-- ======= Book A Table Section ======= -->
     <section id="book-a-table" class="book-a-table" >
-      <div class="container" data-aos="fade-up" style="overflow: scroll;">
+      <div class="container" data-aos="fade-up" style="overflow: auto">
 
         <div class="section-title">
           <h2>Reservation</h2>
