--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   ======================================================== -->
 </head>
 
-<body style="height: 100%; overflow: hidden;">
+<body style="overflow: hidden;">
 
   <!-- ======= Top Bar ======= -->
 
@@ -524,7 +524,7 @@
 
     <!-- ======= Book A Table Section ======= -->
     <section id="book-a-table" class="book-a-table" >
-      <div class="container" data-aos="fade-up" style="overflow: auto">
+      <div class="container" data-aos="fade-up" style="overflow: scroll;">
 
         <div class="section-title">
           <h2>Reservation</h2>
