--- a/index.html
+++ b/index.html
@@ -523,8 +523,8 @@
     </section><!-- End Events Section -->
 
     <!-- ======= Book A Table Section ======= -->
-    <section id="book-a-table" class="book-a-table" >
-      <div class="container" data-aos="fade-up" style="overflow: scroll;">
+    <section id="book-a-table" class="book-a-table" style="overflow: scroll;" >
+      <div class="container" data-aos="fade-up" >
 
         <div class="section-title">
           <h2>Reservation</h2>
