--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
+  <style>
+    .reserv{
+      overflow: scroll !important;
+    }
+  </style>
 </head>
 
 <body style="overflow: hidden;">
@@ -523,8 +529,8 @@
     </section><!-- End Events Section -->
 
     <!-- ======= Book A Table Section ======= -->
-    <section id="book-a-table" class="book-a-table" style="overflow: scroll;" >
-      <div class="container" data-aos="fade-up" >
+    <section id="book-a-table" class="book-a-table"  >
+      <div class="container reserv" data-aos="fade-up" >
 
         <div class="section-title">
           <h2>Reservation</h2>
