--- a/index.html
+++ b/index.html
@@ -36,11 +36,7 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 
-  <style>
-    .reserv{
-      overflow: scroll !important;
-    }
-  </style>
+  
 </head>
 
 <body style="overflow: hidden;">
@@ -530,7 +526,7 @@
 
     <!-- ======= Book A Table Section ======= -->
     <section id="book-a-table" class="book-a-table"  >
-      <div class="container reserv" data-aos="fade-up" >
+      <div class="container" data-aos="fade-up" >
 
         <div class="section-title">
           <h2>Reservation</h2>
@@ -565,7 +561,7 @@
             </div>
           </div>
           <div class="form-group mt-3">
-            <textarea class="form-control" name="message" rows="5" placeholder="Message"></textarea>
+            <textarea class="form-control" name="message" rows="3" placeholder="Message"></textarea>
             <div class="validate"></div>
           </div>
           <div class="mb-3">
