--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="formpemesanan.html">Lobster Bisque</a><span>$5.95</span>
+              <a href="formorder.html">Lobster Bisque</a><span>$5.95</span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
